// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DiaryService getCalendarEntries should cater for no diary-days returned 1`] = `
{
  "entries": {},
  "monthRange": {
    "1-2023": true,
    "2-2023": true,
    "3-2023": true,
  },
}
`;

exports[`DiaryService getCalendarEntries should get calendar entries for a date and number of months back 1`] = `
{
  "entries": {
    "3-2023": [
      28,
      27,
    ],
  },
  "monthRange": {
    "1-2023": true,
    "2-2023": true,
    "3-2023": true,
  },
}
`;

exports[`DiaryService getDiaryEntries should cater for no diary-day for specified date 1`] = `null`;

exports[`DiaryService getDiaryEntries should get diary entries for a specified date 1`] = `
{
  "meals": {
    "2023-04-27": {
      "breakfast": {
        "contents": [
          {
            "food": "mock_food_1.2",
            "id": "1.2",
            "quantity": "mock_quantity_1.2",
          },
        ],
      },
      "dinner": {
        "contents": [
          {
            "food": "mock_food_2.2",
            "id": "2.2",
          },
        ],
      },
      "lunch": {
        "contents": [],
      },
      "snack_1": {
        "contents": [],
      },
      "snack_2": {
        "contents": [],
      },
    },
    "2023-04-28": {
      "breakfast": {
        "contents": [
          {
            "description": "mock_description_1.1",
            "food": "mock_food_1.1",
            "id": "1",
          },
        ],
      },
      "dinner": {
        "contents": [
          {
            "food": "mock_food_3.1",
            "id": "3.1",
          },
        ],
      },
      "lunch": {
        "contents": [],
      },
      "snack_1": {
        "contents": [
          {
            "food": "mock_food_2.1",
            "id": "2.1",
          },
        ],
      },
      "snack_2": {
        "contents": [],
      },
    },
  },
  "wellness": {
    "2023-04-27": {
      "alcohol": {
        "value": 0,
      },
      "excercise": {
        "details": "",
        "time": "00:00",
      },
      "tea_coffee": {
        "value": 2,
      },
      "water": {
        "value": 4,
      },
    },
    "2023-04-28": {
      "alcohol": {
        "value": 1,
      },
      "excercise": {
        "details": "mock exercise details",
        "time": "01:15",
      },
      "tea_coffee": {
        "value": 0,
      },
      "water": {
        "value": 2,
      },
    },
  },
}
`;
